Add .gitignore and DB-backed attendance API + update attendance page

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-﻿uploads/
+﻿node_modules/
+vendor/
+.env
+.vscode/
+logs/
+uploads/
+uploads/*
+*.log
+*.sql
+package-lock.json
+package.json
+pdf_output.txt
+*.cache
+/.idea/
+node_modules
+npm-debug.log
+composer.lock
+/.DS_Store
+*.zipuploads/
 *.sql
 .env
 api/db.php
